# vision3D

./: .gitignore  CMakeLists.txt  Canvas.cpp  Canvas.cpp~  Canvas.hpp  Canvas.hpp~  CanvasList.cpp  CanvasList.hpp  CanvasListRef.cpp  CanvasListRef.cpp~  CanvasListRef.hpp  CanvasListRef.hpp~  CubeList.cpp  Edge2D.cpp  Edge2D.hpp  Edge3D.cpp  Edge3D.hpp  Face3D.cpp  Face3D.hpp  INSTALL  Makefile  Matrix.h  Matrix3x3.cpp  Matrix3x3.hpp  ObjFile.cpp  ObjFile.hpp  ObjFileReader.cpp  ObjFileReader.hpp  Object.cpp  Object.hpp  Object3D.cpp  Object3DList.hpp  Object3DListRef.cpp  Object3DListRef.hpp  Panorama.cpp  Panorama.hpp  Point2D.cpp  Point2D.hpp  Point3D.cpp  Point3D.hpp  (+25 more)
backup/: Edge3D.cpp  Edge3D.hpp  Universe.cpp  Universe.cpp.2  Universe.hpp  Universe.hpp.2
contrib/: L'objet et le C++ selon l'Ours Blanc des Carpathes.html  calcul_repere_ecran.txt
contrib/L'objet et le C++ selon l'Ours Blanc des Carpathes_fichiers/: header.html  initial.html  menu.html
contrib/L'objet et le C++ selon l'Ours Blanc des Carpathes_fichiers/initial_data/: monstyle.css
contrib/L'objet et le C++ selon l'Ours Blanc des Carpathes_fichiers/menu_data/: stylemenu.css
deprecated/: Cube.cpp  Cube.hpp  CubeList.hpp  ObjFile.cpp  ObjFile.hpp  ObjFileReader.hpp  Object.cpp  Object.hpp  Object3D.hpp  Object3DList.cpp  Object3DListValor.hpp  Panorama.cpp  Panorama.hpp  Universe.cpp  Universe.cpp2
